# extension-whitelist

./: .gitignore  README.md  binding.gyp  compile_commands.json  extension_set.cc  extension_set.h  extension_whitelist_data.cc  extension_whitelist_data.h  extension_whitelist_parser.cc  extension_whitelist_parser.h  package-lock.json  package.json  sonar-project.properties  sonar-project.properties.properties
.github/workflows/: codeql-analysis.yml  main.yml  sonar.yml
brave/: BUILD.gn
data/: whitelist.json
node_addon/: EWParserWrap.cc  EWParserWrap.h  addon.cpp
scripts/: gen_data_file.js
test/: deserialize.js  from_json.js
