if (is_android) {
  import("//build/config/android/rules.gni")
  dep_base = rebase_path("./", "//")
} else {
  dep_base = rebase_path("../..", "//")
}

config("external_config") {
  include_dirs = [ ".." ]
}

config("internal_config") {
}

source_set("extension-whitelist") {
  public_configs = [ ":external_config" ]
  configs += [ ":internal_config" ]
  sources = [
    "../extension_whitelist_parser.cc",
    "../extension_whitelist_parser.h",
  ]

  deps = [
  ]
}
